@@ -411,3 +411,11 @@ Still don't know why I get a row = -1 for a cell, but at least it loads.
 2000-04-21 -Montel laurent <montell@club-internet.fr>
 -----------------------------------------------------
 -Add caption in kspread_dlg_layout, kspread_dlg_oszi
+
+2000-04-29 -Montel laurent <montell@club-internet.fr>
+-----------------------------------------------------
+-Add two functions : sign which return -1 if number is negative, 1 if positive
+and zero when it's null
+and atan2
+-Start to create help for kspread_dlg_formula
+-Improved kspread_dlg_conditionnal
